--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="nav">
                     <ul class="item-menu">
-                        <li class="item"><a class="anchor" href="login.html">register/login as a vendor ➜</a></li>
+                        <li class="item"><a class="anchor" href="login.html" target="_blank">register/login as a vendor ➜</a></li>
                     </ul>
                 </div>
             </div>
@@ -192,8 +192,6 @@
                             <img class="social-logo" src="asset/images/twitter.svg">
                             <img class="social-logo" src="asset/images/facebook.svg">
                         </li>
-
-
 
                     </ul>
 
