--- a/login.html
+++ b/login.html
@@ -123,7 +123,7 @@
                                     <div class="form-input">
                                         <label class="my-label" for="password">password</label>
                                         <div class="div">
-                                            <input class="my-input11" type="text">
+                                            <input class="my-input11" type="password">
                                             <i class="fa-thin fa-mobile"></i>
                                         </div>
                                         <small class="character">Use 8 or more characters with a mix of letters, numbers & symbols.</small>
@@ -131,7 +131,7 @@
                                     <div class="form-input">
                                         <label class="my-label" for="password">password</label>
                                         <div class="div">
-                                            <input class="my-input11" type="text">
+                                            <input class="my-input11" type="password">
                                             <i class="fa-thin fa-mobile"></i>
                                         </div>
                                     </div>
