--- a/index.html
+++ b/index.html
@@ -149,17 +149,17 @@
                                 <h1 class="food-type">cakes and pasteries<span class="pieces">(9 pieces)</h1>
                                 <span><i class="fa-solid fa-caret-right"></i></span>
                             </div>
-                        </div>
-                        <div class="box-container1">
-                            <div class="box">
+                            <div class="box shawarma">
                                 <h1 class="food-type">shawarma and pizza <span class="pieces">(2 pieces)</h1>
                                 <span><i class="fa-solid fa-caret-right"></i></span>
                             </div>
-                            <div class="box">
+                            <div class="box shawarma">
                                 <h1 class="food-type">swallows<span class="pieces">(9 places)</h1>
                                 <span><i class="fa-solid fa-caret-right"></i></span>
                             </div>
+                       
                         </div>
+                   
                     </div>
                 </div>
             </div>
